--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cheatsheetdash",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "node-fetch": "^3.3.2"
   }
